[package]
name = "api_gateway_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.11", features = ["yaml"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bytes = "1.2"
tokio-util = "0.7"
regex="1"
log = "0.4"
env_logger = "0.11.3"
fern = "0.6"
chrono = "0.4"
lazy_static = "1.4"
flexi_logger = "0.28"